--- a/server/app/requirements.txt
+++ b/server/app/requirements.txt
@@ -3,11 +3,11 @@ Flask-Login==0.4.0
 Flask-Session==0.3.1
 Flask_SocketIO
 itsdangerous==0.24
-Jinja2==2.7.3
+Jinja2>=2.10
 MarkupSafe==0.23
 python-engineio
 python-socketio
-six==1.9.0
+six>=1.10.0
 Werkzeug==0.15.3
 gevent
 gevent-websocket
